--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 
   "content_scripts": [
     {
-      "matches": ["*://*.reddit.com/*"],
+      "matches": ["*://*.reddit.com/r/*"],
       "js": ["murkle.js"]
     }
   ],
